--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "commander": "^10.0.1",
     "dotenv": "^16.1.3",
+    "fastest-levenshtein": "^1.0.16",
     "tsx": "^3.12.7",
     "zx": "^7.2.2"
   },
